fixed mobile header graphic, link spacing

--- a/css/electrode.scss
+++ b/css/electrode.scss
@@ -251,6 +251,7 @@ html, body {
 }
 
 .pillar-links {
+  text-align: center;
   a {
     border-radius: 8px;
     border: 1px solid #d62470;
@@ -261,7 +262,6 @@ html, body {
     text-align: center;
     color: #ffffff;
     padding:10px;
-    margin-left: 30%;
   }
 }
 
